--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>rubrica_1.1</title>
 </head>
 <body>
+    <center><h1>RECETAS DE COCINA</h1></center>
     
 </body>
 </html>
