inicie la primera receta

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <center><h1>RECETAS DE COCINA</h1></center>
-    
+    <h2>Arroz con Pollo</h2>
+    <p>Ingredientes:</p>
 </body>
 </html>
