comencé la lista de ingredientes de la primera receta

--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
     <center><h1>RECETAS DE COCINA</h1></center>
     <h2>Arroz con Pollo</h2>
     <p>Ingredientes:</p>
+    <ul>
+        <li>2 taza de arroz</li>
+        <li>1 pechuga de pollo cortada en trozos</li>
+        <li>1 cebolla picada finamente</li>
+        <li>1 zanahoria en cubos pequeños</li>
+        <li>1 pimiento rojo en tiras</li>
+        <li>2 tazas de caldo de pollo (o agua con un cubo de caldo)</li>
 </body>
 </html>
