termine la lista de ingredientes de la primera receta

--- a/index.html
+++ b/index.html
@@ -16,5 +16,11 @@
         <li>1 zanahoria en cubos pequeños</li>
         <li>1 pimiento rojo en tiras</li>
         <li>2 tazas de caldo de pollo (o agua con un cubo de caldo)</li>
+        <li>2 dientes de ajo picados</li>
+        <li>1 cucharadita de comino</li>
+        <li>1 cucharadita de cúrcuma (opcional, para dar color)</li>
+        <li>2 cucharadas de aceite vegetal</li>
+        <li>Sal y pimienta al gusto</li>
+        <li>Perejil picado para decorar (opcional)</li>
 </body>
 </html>
