avancé en la preparación de la primera receta

--- a/index.html
+++ b/index.html
@@ -22,5 +22,24 @@
         <li>2 cucharadas de aceite vegetal</li>
         <li>Sal y pimienta al gusto</li>
         <li>Perejil picado para decorar (opcional)</li>
+    </ul>
+    <p>Preparación:</p>
+        <P>1. Preparar los ingredientes:</P>   
+            <ol>
+                <li>Lavar y cortar la pechuga de pollo en trozos medianos.</li>
+                <li>Picar la cebolla, el ajo y la zanahoria en cubos pequeños.</li>
+                <li>Cortar el pimiento rojo en tiras delgadas.</li>
+            </ol>
+        <P>2. Sofreír el pollo:</P>
+            <ol>
+                <li>En una olla grande o sartén profundo, calentar 2 cucharadas de aceite a fuego medio-alto.</li>
+                <li>Agregar los trozos de pollo y dorarlos por ambos lados (unos 5-7 minutos).</li>
+                <li>Retirar el pollo y reservar en un plato.</li>
+            </ol>
+        <P>3. Sofreír los vegetales:</P>
+            <ol>
+                <li>En la misma olla (sin lavar), agregar la cebolla y el ajo picado. Sofreír hasta que la cebolla se torne transparente.</li>
+                <li>Añadir la zanahoria y el pimiento rojo. Cocinar por unos 3 minutos mientras se revuelve ocasionalmente.</li>
+            </ol>
 </body>
 </html>
