termine la primera receta

--- a/index.html
+++ b/index.html
@@ -41,5 +41,28 @@
                 <li>En la misma olla (sin lavar), agregar la cebolla y el ajo picado. Sofreír hasta que la cebolla se torne transparente.</li>
                 <li>Añadir la zanahoria y el pimiento rojo. Cocinar por unos 3 minutos mientras se revuelve ocasionalmente.</li>
             </ol>
+        <P>4. Agregar el arroz y los condimentos:</P>
+            <ol>
+                <li>Incorporar el arroz crudo y revolver bien para que se impregne de los sabores.</li>
+                <li>Añadir el comino, la cúrcuma, la sal y la pimienta al gusto.</li>
+                <li>Sofreír el arroz con los vegetales por 2 minutos, revolviendo constantemente.</li>
+            </ol>
+        <P>5. Cocinar con el caldo:</P>
+            <ol>
+                <li>Verter las 2 tazas de caldo de pollo caliente en la olla y mezclar suavemente.</li>
+                <li>Volver a colocar los trozos de pollo dorados dentro de la olla, asegurándose de que queden bien distribuidos.</li>
+            </ol>
+        <P>6. Cocción del arroz:</P>
+            <ol>
+                <li>Dejar que el líquido llegue a ebullición a fuego medio-alto.</li>
+                <li>Reducir el fuego a bajo y tapar la olla.</li>
+                <li>Cocinar durante 15-20 minutos sin destapar, hasta que el arroz absorba todo el líquido y esté tierno.</li>
+            </ol>
+        <P>7. Reposo y servir:</P>
+            <ol>
+                <li>Una vez listo, apagar el fuego y dejar reposar 5 minutos con la tapa puesta.</li>
+                <li>Servir caliente, decorado con un poco de perejil picado si se desea.</li>
+            </ol>
+
 </body>
 </html>
