--- a/index.html
+++ b/index.html
@@ -8,61 +8,64 @@
 <body>
     <center><h1>RECETAS DE COCINA</h1></center>
     <h2>Arroz con Pollo</h2>
-    <p>Ingredientes:</p>
-    <ul>
-        <li>2 taza de arroz</li>
-        <li>1 pechuga de pollo cortada en trozos</li>
-        <li>1 cebolla picada finamente</li>
-        <li>1 zanahoria en cubos pequeños</li>
-        <li>1 pimiento rojo en tiras</li>
-        <li>2 tazas de caldo de pollo (o agua con un cubo de caldo)</li>
-        <li>2 dientes de ajo picados</li>
-        <li>1 cucharadita de comino</li>
-        <li>1 cucharadita de cúrcuma (opcional, para dar color)</li>
-        <li>2 cucharadas de aceite vegetal</li>
-        <li>Sal y pimienta al gusto</li>
-        <li>Perejil picado para decorar (opcional)</li>
-    </ul>
-    <p>Preparación:</p>
-        <P>1. Preparar los ingredientes:</P>   
-            <ol>
-                <li>Lavar y cortar la pechuga de pollo en trozos medianos.</li>
-                <li>Picar la cebolla, el ajo y la zanahoria en cubos pequeños.</li>
-                <li>Cortar el pimiento rojo en tiras delgadas.</li>
-            </ol>
-        <P>2. Sofreír el pollo:</P>
-            <ol>
-                <li>En una olla grande o sartén profundo, calentar 2 cucharadas de aceite a fuego medio-alto.</li>
-                <li>Agregar los trozos de pollo y dorarlos por ambos lados (unos 5-7 minutos).</li>
-                <li>Retirar el pollo y reservar en un plato.</li>
-            </ol>
-        <P>3. Sofreír los vegetales:</P>
-            <ol>
-                <li>En la misma olla (sin lavar), agregar la cebolla y el ajo picado. Sofreír hasta que la cebolla se torne transparente.</li>
-                <li>Añadir la zanahoria y el pimiento rojo. Cocinar por unos 3 minutos mientras se revuelve ocasionalmente.</li>
-            </ol>
-        <P>4. Agregar el arroz y los condimentos:</P>
-            <ol>
-                <li>Incorporar el arroz crudo y revolver bien para que se impregne de los sabores.</li>
-                <li>Añadir el comino, la cúrcuma, la sal y la pimienta al gusto.</li>
-                <li>Sofreír el arroz con los vegetales por 2 minutos, revolviendo constantemente.</li>
-            </ol>
-        <P>5. Cocinar con el caldo:</P>
-            <ol>
-                <li>Verter las 2 tazas de caldo de pollo caliente en la olla y mezclar suavemente.</li>
-                <li>Volver a colocar los trozos de pollo dorados dentro de la olla, asegurándose de que queden bien distribuidos.</li>
-            </ol>
-        <P>6. Cocción del arroz:</P>
-            <ol>
-                <li>Dejar que el líquido llegue a ebullición a fuego medio-alto.</li>
-                <li>Reducir el fuego a bajo y tapar la olla.</li>
-                <li>Cocinar durante 15-20 minutos sin destapar, hasta que el arroz absorba todo el líquido y esté tierno.</li>
-            </ol>
-        <P>7. Reposo y servir:</P>
-            <ol>
-                <li>Una vez listo, apagar el fuego y dejar reposar 5 minutos con la tapa puesta.</li>
-                <li>Servir caliente, decorado con un poco de perejil picado si se desea.</li>
-            </ol>
+        <p>Ingredientes:</p>
+        <ul>
+            <li>2 taza de arroz</li>
+            <li>1 pechuga de pollo cortada en trozos</li>
+            <li>1 cebolla picada finamente</li>
+            <li>1 zanahoria en cubos pequeños</li>
+            <li>1 pimiento rojo en tiras</li>
+            <li>2 tazas de caldo de pollo (o agua con un cubo de caldo)</li>
+            <li>2 dientes de ajo picados</li>
+            <li>1 cucharadita de comino</li>
+            <li>1 cucharadita de cúrcuma (opcional, para dar color)</li>
+            <li>2 cucharadas de aceite vegetal</li>
+            <li>Sal y pimienta al gusto</li>
+            <li>Perejil picado para decorar (opcional)</li>
+        </ul>
+        <p>Preparación:</p>
+            <P>1. Preparar los ingredientes:</P>   
+                <ol>
+                    <li>Lavar y cortar la pechuga de pollo en trozos medianos.</li>
+                    <li>Picar la cebolla, el ajo y la zanahoria en cubos pequeños.</li>
+                    <li>Cortar el pimiento rojo en tiras delgadas.</li>
+                </ol>
+            <P>2. Sofreír el pollo:</P>
+                <ol>
+                    <li>En una olla grande o sartén profundo, calentar 2 cucharadas de aceite a fuego medio-alto.</li>
+                    <li>Agregar los trozos de pollo y dorarlos por ambos lados (unos 5-7 minutos).</li>
+                    <li>Retirar el pollo y reservar en un plato.</li>
+                </ol>
+            <P>3. Sofreír los vegetales:</P>
+                <ol>
+                    <li>En la misma olla (sin lavar), agregar la cebolla y el ajo picado. Sofreír hasta que la cebolla se torne transparente.</li>
+                    <li>Añadir la zanahoria y el pimiento rojo. Cocinar por unos 3 minutos mientras se revuelve ocasionalmente.</li>
+                </ol>
+            <P>4. Agregar el arroz y los condimentos:</P>
+                <ol>
+                    <li>Incorporar el arroz crudo y revolver bien para que se impregne de los sabores.</li>
+                    <li>Añadir el comino, la cúrcuma, la sal y la pimienta al gusto.</li>
+                    <li>Sofreír el arroz con los vegetales por 2 minutos, revolviendo constantemente.</li>
+                </ol>
+            <P>5. Cocinar con el caldo:</P>
+                <ol>
+                    <li>Verter las 2 tazas de caldo de pollo caliente en la olla y mezclar suavemente.</li>
+                    <li>Volver a colocar los trozos de pollo dorados dentro de la olla, asegurándose de que queden bien distribuidos.</li>
+                </ol>
+            <P>6. Cocción del arroz:</P>
+                <ol>
+                    <li>Dejar que el líquido llegue a ebullición a fuego medio-alto.</li>
+                    <li>Reducir el fuego a bajo y tapar la olla.</li>
+                    <li>Cocinar durante 15-20 minutos sin destapar, hasta que el arroz absorba todo el líquido y esté tierno.</li>
+                </ol>
+            <P>7. Reposo y servir:</P>
+                <ol>
+                    <li>Una vez listo, apagar el fuego y dejar reposar 5 minutos con la tapa puesta.</li>
+                    <li>Servir caliente, decorado con un poco de perejil picado si se desea.</li>
+                </ol>
+    <h2>Lasaña Clásica de Carne</h2>
+        <p>Ingredientes:</p>
+        
 
 </body>
 </html>
