agregue los ingredientes de la 2da receta

--- a/index.html
+++ b/index.html
@@ -65,7 +65,38 @@
                 </ol>
     <h2>Lasaña Clásica de Carne</h2>
         <p>Ingredientes:</p>
+                <p>Para la salsa boloñesa:</p>
+                    <ol>
+                        <li>500 g de carne molida de res</li>
+                        <li>1 cebolla picada finamente</li>
+                        <li>2 dientes de ajo picados</li>
+                        <li>1 zanahoria rallada</li>
+                        <li>2 tomates grandes triturados (o 400 g de tomate enlatado)</li>
+                        <li>2 cucharadas de pasta de tomate</li>
+                        <li>1 cucharadita de orégano seco</li>
+                        <li>1 cucharadita de albahaca seca</li>
+                        <li>1/2 cucharadita de comino</li>
+                        <li>1 cucharadita de azúcar (para reducir la acidez del tomate)</li>
+                        <li>Sal y pimienta al gusto</li>
+                        <li>2 cucharadas de aceite de oliva</li>
+                        <li>1/2 taza de caldo de carne o agua</li>
+                    </ol>
+                <p>Para la salsa bechamel::</p>
+                    <ol>
+                        <li>2 cucharadas de mantequilla</li>
+                        <li>2 cucharadas de harina de trigo</li>
+                        <li>2 tazas de leche</li>
+                        <li>Sal, pimienta y nuez moscada al gusto</li>
+                    </ol>
+                <p>Otros ingredientes:</p>
+                    <ol>
+                        <li>12 placas de lasaña precocida</li>
+                        <li>200 gramos de queso mozzarella rallado</li>
+                        <li>50 gramos de queso parmesano rallado (opcional)</li>>
+                    </ol>
+        <p>Preparación:</p>
         
+
 
 </body>
 </html>
