agregue la preparaciuon de la receta 2

--- a/index.html
+++ b/index.html
@@ -95,8 +95,35 @@
                         <li>50 gramos de queso parmesano rallado (opcional)</li>>
                     </ol>
         <p>Preparación:</p>
-        
-
-
+                <p>Preparar la salsa boloñesa:</p>
+                    <ol>
+                        <li>En una olla grande, calentar el aceite de oliva a fuego medio.</li>
+                        <li>Agregar la cebolla y el ajo picados. Sofreír hasta que la cebolla esté transparente.</li>
+                        <li>Incorporar el ajo picado y cocinar por 1 minuto más, removiendo constantemente.</li>
+                        <li>Agregar la carne molida y cocinar hasta que se dore, deshaciéndola con una cuchara de madera.</li>
+                        <li>Añadir la zanahoria rallada, el tomate triturado, la pasta de tomate, el caldo de carne y los condimentos (orégano, albahaca, comino, azúcar, sal y pimienta).</li>
+                        <li>Revolver bien y cocinar a fuego medio-bajo durante 20-30 minutos, removiendo ocasionalmente hasta obtener una salsa espesa.</li>
+                        <li>Retirar del fuego y reservar.</li>
+                    </ol>
+                <p>Preparar la salsa bechamel:</p>
+                    <ol>
+                        <li>En una cacerola, derretir la mantequilla a fuego medio.</li>
+                        <li>Agregar la harina y mezclar constantemente con un batidor de mano hasta formar una pasta suave y sin grumos.</li>
+                        <li>Poco a poco, añadir la leche caliente sin dejar de batir para evitar grumos.</li>
+                        <li>Cocinar a fuego medio hasta que la salsa espese y tenga una textura cremosa.</li>
+                        <li>Agregar nuez moscada, sal y pimienta al gusto.</li>
+                        <li>Retirar del fuego y reservar.</li>
+                    </ol>
+                <p>Armar la lasaña:</p>
+                    <ol>
+                        <li>En un molde rectangular, colocar una capa de salsa boloñesa en el fondo.</li>
+                        <li>Cubrir con una capa de placas de lasaña precocida.</li>
+                        <li>Verter una capa de salsa bechamel sobre las placas de lasaña.</li>
+                        <li>Repetir el proceso hasta terminar con una capa de salsa bechamel.</li>
+                        <li>Espolvorear el queso mozzarella rallado y el queso parmesano (si se desea).</li>
+                        <li>Cubrir con papel aluminio y hornear a 180°C durante 30 minutos.</li>
+                        <li>Retirar el papel aluminio y hornear por 10 minutos más o hasta que el queso esté dorado y burbujeante.</li>
+                        <li>Dejar reposar unos minutos antes de servir.</li>
+                    </ol>
 </body>
 </html>
