agregue los ingredientes de la 3ra receta

--- a/index.html
+++ b/index.html
@@ -126,5 +126,20 @@
                         <li>Dejar reposar unos minutos antes de servir.</li>
                     </ol>
     <h2>Ensalada César</h2>
+        <p>Ingredientes:</p>
+            <ol>
+                <li>1 lechuga romana</li>
+                <li>1 pechuga de pollo</li>
+                <li>1 taza de crutones</li>
+                <li>1/2 taza de queso parmesano rallado</li>
+                <li>1/2 taza de mayonesa</li>
+                <li>1/4 taza de jugo de limón</li>
+                <li>2 dientes de ajo picados</li>
+                <li>1 cucharadita de mostaza Dijon</li>
+                <li>1 cucharadita de salsa inglesa</li>
+                <li>Sal y pimienta al gusto</li>
+                <li>1/4 taza de aceite de oliva</li>
+            </ol>
+       
 </body>
 </html>
