agrgeue la preparación de la 3ra receta

--- a/index.html
+++ b/index.html
@@ -140,6 +140,21 @@
                 <li>Sal y pimienta al gusto</li>
                 <li>1/4 taza de aceite de oliva</li>
             </ol>
+        <p>Preparación:</p>
+            <p>1. Preparar la lechuga:</p>
+                <ol>
+                    <li>Lavar y secar las hojas de lechuga romana. Cortar en trozos grandes y colocar en un tazón grande.</li>
+                </ol>
+            <p>2. Preparar el pollo:</p>
+                <ol>
+                    <li>Cocinar la pechuga de pollo a la parrilla o en una sartén con un poco de aceite hasta que esté dorada y cocida por completo.</li>
+                    <li>Cortar en tiras o cubos y reservar.</li>
+                </ol>
+            <p>3. Preparar la salsa César:</p>
+                <ol>
+                    <li>En un tazón pequeño, mezclar la mayonesa, el jugo de limón, el ajo picado, la mostaza Dijon, la salsa inglesa, la sal y la pimienta.</li>
+                    <li>Agregar el aceite de oliva en forma de hilo mientras se bate
+            
        
 </body>
 </html>
