termine la 3ra receta y comence la 4ta

--- a/index.html
+++ b/index.html
@@ -153,7 +153,17 @@
             <p>3. Preparar la salsa César:</p>
                 <ol>
                     <li>En un tazón pequeño, mezclar la mayonesa, el jugo de limón, el ajo picado, la mostaza Dijon, la salsa inglesa, la sal y la pimienta.</li>
-                    <li>Agregar el aceite de oliva en forma de hilo mientras se bate
+                    <li>Agregar el aceite de oliva en forma de hilo mientras se batelinea para emulsionar la salsa.</li>
+                </ol>
+            <p>4. Armar la ensalada:</p>
+                <ol>
+                    <li>Verter la salsa César sobre las hojas de lechuga y mezclar bien para que se impregnen de la salsa.</li>
+                    <li>Añadir los crutones y el queso parmesano rallado. Mezclar nuevamente.</li>
+                    <li>Colocar las tiras de pollo cocido sobre la ensalada y servir.</li>
+                </ol>
+    <h2>Spaghetti Carbonara</h2>
+
+
             
        
 </body>
