agregue la preparacion de la 4ta receta

--- a/index.html
+++ b/index.html
@@ -172,6 +172,28 @@
                 <li>Sal y pimienta al gusto</li>
                 <li>1 cucharada de aceite de oliva</li> 
             </ol>
+        <p>Preparación:</p>
+            <p>1. Cocinar la pasta:</p>
+                <ol>
+                    <li>Cocinar el spaghetti en una olla con agua hirviendo y sal hasta que esté al dente.</li>
+                    <li>Escurrir y reservar 1 taza del agua de cocción.</li>
+                </ol>
+            <p>2. Preparar la panceta:</p>
+                <ol>
+                    <li>En una sartén grande, calentar el aceite de oliva a fuego medio.</li>
+                    <li>Agregar la panceta o bacon en tiras y cocinar hasta que esté dorada y crujiente.</li>
+                    <li>Añadir el ajo picado y cocinar por 1 minuto más.</li>
+                </ol>
+            <p>3. Mezclar los ingredientes:</p>
+                <ol>
+                    <li>En un tazón grande, batir las yemas de huevo con el queso parmesano rallado.</li>
+                    <li>Agregar la panceta con el ajo y mezclar bien.</li>
+                    <li>Incorporar el spaghetti cocido y mezclar para que se impregne de la mezcla de huevo y queso.</li>
+                    <li>Si la pasta está muy seca, añadir un poco del agua de cocción reservada.</li>
+                </ol>
+            <p>4. Servir:</p>
+                <ol>
+                    <li>Rectificar la sazón con sal y pimienta al gusto.</li>
             
       
 </body>
