agregue las imagenes a las recetas

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <center><h1>RECETAS DE COCINA</h1></center>
     <h2>Arroz con Pollo</h2>
+    <img src="https://cloudfront-us-east-1.images.arcpublishing.com/elespectador/LDRLW34JWNAPHDQ6I7KOOUJVKI.jpg" alt="">
         <p>Ingredientes:</p>
         <ul>
             <li>2 taza de arroz</li>
@@ -25,48 +26,49 @@
         </ul>
         <p>Preparación:</p>
             <P>1. Preparar los ingredientes:</P>   
-                <ol>
+                <ul>
                     <li>Lavar y cortar la pechuga de pollo en trozos medianos.</li>
                     <li>Picar la cebolla, el ajo y la zanahoria en cubos pequeños.</li>
                     <li>Cortar el pimiento rojo en tiras delgadas.</li>
-                </ol>
+                </ul>
             <P>2. Sofreír el pollo:</P>
-                <ol>
+                <ul>
                     <li>En una olla grande o sartén profundo, calentar 2 cucharadas de aceite a fuego medio-alto.</li>
                     <li>Agregar los trozos de pollo y dorarlos por ambos lados (unos 5-7 minutos).</li>
                     <li>Retirar el pollo y reservar en un plato.</li>
-                </ol>
+                </ul>
             <P>3. Sofreír los vegetales:</P>
-                <ol>
+                <ul>
                     <li>En la misma olla (sin lavar), agregar la cebolla y el ajo picado. Sofreír hasta que la cebolla se torne transparente.</li>
                     <li>Añadir la zanahoria y el pimiento rojo. Cocinar por unos 3 minutos mientras se revuelve ocasionalmente.</li>
-                </ol>
+                </ul>
             <P>4. Agregar el arroz y los condimentos:</P>
-                <ol>
+                <ul>
                     <li>Incorporar el arroz crudo y revolver bien para que se impregne de los sabores.</li>
                     <li>Añadir el comino, la cúrcuma, la sal y la pimienta al gusto.</li>
                     <li>Sofreír el arroz con los vegetales por 2 minutos, revolviendo constantemente.</li>
-                </ol>
+                </ul>
             <P>5. Cocinar con el caldo:</P>
-                <ol>
+                <ul>
                     <li>Verter las 2 tazas de caldo de pollo caliente en la olla y mezclar suavemente.</li>
                     <li>Volver a colocar los trozos de pollo dorados dentro de la olla, asegurándose de que queden bien distribuidos.</li>
-                </ol>
+                </ul>
             <P>6. Cocción del arroz:</P>
-                <ol>
+                <ul>
                     <li>Dejar que el líquido llegue a ebullición a fuego medio-alto.</li>
                     <li>Reducir el fuego a bajo y tapar la olla.</li>
                     <li>Cocinar durante 15-20 minutos sin destapar, hasta que el arroz absorba todo el líquido y esté tierno.</li>
-                </ol>
+                </ul>
             <P>7. Reposo y servir:</P>
-                <ol>
+                <ul>
                     <li>Una vez listo, apagar el fuego y dejar reposar 5 minutos con la tapa puesta.</li>
                     <li>Servir caliente, decorado con un poco de perejil picado si se desea.</li>
-                </ol>
+                </ul>
     <h2>Lasaña Clásica de Carne</h2>
+    <img src="https://content-cocina.lecturas.com/medio/2021/12/14/lasana-clasica-de-carne-de-ternera-y-cerdo_13554077_1280x720.jpg" alt="">
         <p>Ingredientes:</p>
                 <p>Para la salsa boloñesa:</p>
-                    <ol>
+                    <ul>
                         <li>500 g de carne molida de res</li>
                         <li>1 cebolla picada finamente</li>
                         <li>2 dientes de ajo picados</li>
@@ -80,23 +82,23 @@
                         <li>Sal y pimienta al gusto</li>
                         <li>2 cucharadas de aceite de oliva</li>
                         <li>1/2 taza de caldo de carne o agua</li>
-                    </ol>
+                    </ul>
                 <p>Para la salsa bechamel::</p>
-                    <ol>
+                    <ul>
                         <li>2 cucharadas de mantequilla</li>
                         <li>2 cucharadas de harina de trigo</li>
                         <li>2 tazas de leche</li>
                         <li>Sal, pimienta y nuez moscada al gusto</li>
-                    </ol>
+                    </ul>
                 <p>Otros ingredientes:</p>
-                    <ol>
+                    <ul>
                         <li>12 placas de lasaña precocida</li>
                         <li>200 gramos de queso mozzarella rallado</li>
                         <li>50 gramos de queso parmesano rallado (opcional)</li>>
-                    </ol>
+                    </ul>
         <p>Preparación:</p>
                 <p>Preparar la salsa boloñesa:</p>
-                    <ol>
+                    <ul>
                         <li>En una olla grande, calentar el aceite de oliva a fuego medio.</li>
                         <li>Agregar la cebolla y el ajo picados. Sofreír hasta que la cebolla esté transparente.</li>
                         <li>Incorporar el ajo picado y cocinar por 1 minuto más, removiendo constantemente.</li>
@@ -104,18 +106,18 @@
                         <li>Añadir la zanahoria rallada, el tomate triturado, la pasta de tomate, el caldo de carne y los condimentos (orégano, albahaca, comino, azúcar, sal y pimienta).</li>
                         <li>Revolver bien y cocinar a fuego medio-bajo durante 20-30 minutos, removiendo ocasionalmente hasta obtener una salsa espesa.</li>
                         <li>Retirar del fuego y reservar.</li>
-                    </ol>
+                    </ul>
                 <p>Preparar la salsa bechamel:</p>
-                    <ol>
+                    <ul>
                         <li>En una cacerola, derretir la mantequilla a fuego medio.</li>
                         <li>Agregar la harina y mezclar constantemente con un batidor de mano hasta formar una pasta suave y sin grumos.</li>
                         <li>Poco a poco, añadir la leche caliente sin dejar de batir para evitar grumos.</li>
                         <li>Cocinar a fuego medio hasta que la salsa espese y tenga una textura cremosa.</li>
                         <li>Agregar nuez moscada, sal y pimienta al gusto.</li>
                         <li>Retirar del fuego y reservar.</li>
-                    </ol>
+                    </ul>
                 <p>Armar la lasaña:</p>
-                    <ol>
+                    <ul>
                         <li>En un molde rectangular, colocar una capa de salsa boloñesa en el fondo.</li>
                         <li>Cubrir con una capa de placas de lasaña precocida.</li>
                         <li>Verter una capa de salsa bechamel sobre las placas de lasaña.</li>
@@ -124,10 +126,11 @@
                         <li>Cubrir con papel aluminio y hornear a 180°C durante 30 minutos.</li>
                         <li>Retirar el papel aluminio y hornear por 10 minutos más o hasta que el queso esté dorado y burbujeante.</li>
                         <li>Dejar reposar unos minutos antes de servir.</li>
-                    </ol>
+                    </ul>
     <h2>Ensalada César</h2>
+    <img src="https://www.goodnes.com/sites/g/files/jgfbjl321/files/srh_recipes/755f697272cbcdc6e5df2adb44b1b705.jpg" alt="">
         <p>Ingredientes:</p>
-            <ol>
+            <ul>
                 <li>1 lechuga romana</li>
                 <li>1 pechuga de pollo</li>
                 <li>1 taza de crutones</li>
@@ -139,31 +142,32 @@
                 <li>1 cucharadita de salsa inglesa</li>
                 <li>Sal y pimienta al gusto</li>
                 <li>1/4 taza de aceite de oliva</li>
-            </ol>
+            </ul>
         <p>Preparación:</p>
             <p>1. Preparar la lechuga:</p>
-                <ol>
+                <ul>
                     <li>Lavar y secar las hojas de lechuga romana. Cortar en trozos grandes y colocar en un tazón grande.</li>
-                </ol>
+                </ul>
             <p>2. Preparar el pollo:</p>
-                <ol>
+                <ul>
                     <li>Cocinar la pechuga de pollo a la parrilla o en una sartén con un poco de aceite hasta que esté dorada y cocida por completo.</li>
                     <li>Cortar en tiras o cubos y reservar.</li>
-                </ol>
+                </ul>
             <p>3. Preparar la salsa César:</p>
-                <ol>
+                <ul>
                     <li>En un tazón pequeño, mezclar la mayonesa, el jugo de limón, el ajo picado, la mostaza Dijon, la salsa inglesa, la sal y la pimienta.</li>
                     <li>Agregar el aceite de oliva en forma de hilo mientras se batelinea para emulsionar la salsa.</li>
-                </ol>
+                </ul>
             <p>4. Armar la ensalada:</p>
-                <ol>
+                <ul>
                     <li>Verter la salsa César sobre las hojas de lechuga y mezclar bien para que se impregnen de la salsa.</li>
                     <li>Añadir los crutones y el queso parmesano rallado. Mezclar nuevamente.</li>
                     <li>Colocar las tiras de pollo cocido sobre la ensalada y servir.</li>
-                </ol>
+                </ul>
     <h2>Spaghetti Carbonara</h2>
+    <img src="https://www.allrecipes.com/thmb/Vg2cRidr2zcYhWGvPD8M18xM_WY=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/11973-spaghetti-carbonara-ii-DDMFS-4x3-6edea51e421e4457ac0c3269f3be5157.jpg" alt="">
         <p>Ingredientes:</p>
-            <ol>
+            <ul>
                 <li>400 g de spaghetti</li>
                 <li>200 g de panceta o bacon en tiras</li>
                 <li>4 yemas de huevo</li>
@@ -171,32 +175,33 @@
                 <li>1 diente de ajo picado</li>
                 <li>Sal y pimienta al gusto</li>
                 <li>1 cucharada de aceite de oliva</li> 
-            </ol>
+            </ul>
         <p>Preparación:</p>
             <p>1. Cocinar la pasta:</p>
-                <ol>
+                <ul>
                     <li>Cocinar el spaghetti en una olla con agua hirviendo y sal hasta que esté al dente.</li>
                     <li>Escurrir y reservar 1 taza del agua de cocción.</li>
-                </ol>
+                </ul>
             <p>2. Preparar la panceta:</p>
-                <ol>
+                <ul>
                     <li>En una sartén grande, calentar el aceite de oliva a fuego medio.</li>
                     <li>Agregar la panceta o bacon en tiras y cocinar hasta que esté dorada y crujiente.</li>
                     <li>Añadir el ajo picado y cocinar por 1 minuto más.</li>
-                </ol>
+                </ul>
             <p>3. Mezclar los ingredientes:</p>
-                <ol>
+                <ul>
                     <li>En un tazón grande, batir las yemas de huevo con el queso parmesano rallado.</li>
                     <li>Agregar la panceta con el ajo y mezclar bien.</li>
                     <li>Incorporar el spaghetti cocido y mezclar para que se impregne de la mezcla de huevo y queso.</li>
                     <li>Si la pasta está muy seca, añadir un poco del agua de cocción reservada.</li>
-                </ol>
+                </ul>
             <p>4. Servir:</p>
-                <ol>
+                <ul>
                     <li>Rectificar la sazón con sal y pimienta al gusto.</li>
     <h2>Estofado de Carne</h2>
+    <img src="https://www.recetasnestle.com.ec/sites/default/files/srh_recipes/7985d6cf276630976f2f84d561de8dd3.jpg" alt="">
         <p>Ingredientes:</p>
-            <ol>
+            <ul>
                 <li>1 kg de carne de res en trozos</li>
                 <li>2 cebollas picadas</li>
                 <li>2 zanahorias en rodajas</li>
@@ -211,35 +216,35 @@
                 <li>2 tazas de caldo de carne</li>
                 <li>Sal y pimienta al gusto</li>
                 <li>2 cucharadas de aceite de oliva</li>
-            </ol>
+            </ul>
         <p>Preparación:</p>
             <p>1. Dorar la carne:</p>
-                <ol>
+                <ul>
                     <li>En una olla grande, calentar el aceite de oliva a fuego medio-alto.</li>
                     <li>Agregar los trozos de carne y dorar por todos lados.</li>
                     <li>Retirar la carne y reservar.</li>
-                </ol>
+                </ul>
             <p>2. Sofreír los vegetales:</p>
-                <ol>
+                <ul>
                     <li>En la misma olla, agregar la cebolla y el ajo picados. Sofreír hasta que estén dorados.</li>
                     <li>Añadir el pimentón dulce, el comino y el orégano. Cocinar por 1 minuto más.</li>
                     <li>Regresar la carne a la olla y mezclar con los vegetales.</li>
-                </ol>
+                </ul>
             <p>3. Agregar el vino y el caldo:</p>
-                <ol>
+                <ul>
                     <li>Verter el vino tinto y cocinar hasta que se evapore el alcohol.</li>
                     <li>Añadir el caldo de carne y las hojas de laurel.</li>
                     <li>Tapar la olla y cocinar a fuego bajo durante 1 hora o hasta que la carne esté tierna.</li>
-                </ol>
+                </ul>
             <p>4. Incorporar las verduras:</p>
-                <ol>
+                <ul>
                     <li>Agregar las zanahorias, las papas y las arvejas a la olla.</li>
                     <li>Cocinar por 20-30 minutos más o hasta que las verduras estén tiernas.</li> 
-                </ol>
+                </ul>
             <p>5. Rectificar la sazón:</p>
-                <ol>
+                <ul>
                     <li>Probar y ajustar la sal y la pimienta al gusto.</li>
                     <li>Retirar las hojas de laurel antes de servir.</li>
-                </ol>     
+                </ul>     
 </body>
 </html>
